@@ -6,13 +6,14 @@ public class GridGenerator : MonoBehaviour
 {
     public Vector3 gridCentre;
     public Vector2Int gridDimensions;
-    public int tileDimensions;
+    public float tileDimensions;
     public GameObject squareTilePrefab;
+    public TileGrid.TileGridShape gridShape = TileGrid.TileGridShape.SQUARE;
     void Update()
     {
         if(Input.GetKeyDown(KeyCode.Space))
         {
-            TileGrid.instance.Initialise(gridCentre,gridDimensions,squareTilePrefab,tileDimensions);
+            TileGrid.instance.Initialise(gridCentre,gridDimensions,squareTilePrefab,tileDimensions,gridShape);
         }
     }
 }
