@@ -1,0 +1,8 @@
+fileFormatVersion: 2
+guid: 5a2b0e7fcaa3a484ba5079d08db22d64
+NativeFormatImporter:
+  externalObjects: {}
+  mainObjectFileID: 2100000
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
